<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <!-- Project information -->
  <groupId>fr.softsf</groupId>
  <artifactId>native-vault</artifactId>
  <version>0.1.0</version>
  <name>NativeVault</name>
  <organization>
    <name>Soft64.fr</name>
  </organization>
  <!-- Developer information -->
  <developers>
    <developer>
      <email>soft64.fr@gmail.com</email>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>
  <!-- Project properties -->
  <properties>
    <junit.version>5.11.4</junit.version>
    <maven.compiler.release>22</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <spotless-maven-plugin.skip>false</spotless-maven-plugin.skip>
  </properties>
  <!-- Project dependencies -->
  <dependencies>
    <!-- SpotBugs Annotations -->
    <dependency>
      <groupId>com.github.spotbugs</groupId>
      <artifactId>spotbugs-annotations</artifactId>
      <version>4.10.3</version>
      <scope>provided</scope>
    </dependency>
    <!-- Apache Commons Lang 3 dependency -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.20.0</version>
    </dependency>
    <!-- JUnit 5 dependency -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <!-- Build configuration -->
  <build>
    <plugins>
      <!--
                          Spotless plugin for source file formatting:
                        - `ratchetFrom`: Reference branch control (`NONE` in this setup).
                        - `skip`: Skip formatting based on the `spotless-maven-plugin.skip` property.
                        - `formats`: Defines format rules for generic text files (e.g., `.gitignore`, `.md`, `.yaml`).
                        - `pom`: Formats and sorts `pom.xml` using `sortPom` rules.
                        - `java`: Applies `google-java-format` with AOSP style, import ordering, and license headers.
                        - `executions`:
                            - `spotless-apply`: Applies formatting during the `validate` phase.
                            - `spotless-check`: Checks if files are properly formatted during the `validate` phase.
                        -->
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>3.9.0</version>
        <configuration>
          <ratchetFrom>NONE</ratchetFrom>
          <skip>${spotless-maven-plugin.skip}</skip>
          <formats>
            <format>
              <includes>
                <include>.gitignore</include>
                <include>jvm.config</include>
                <include>**/*.md</include>
                <include>**/*.xml</include>
                <include>**/*.yaml</include>
                <include>**/*.yml</include>
              </includes>
              <excludes>
                <exclude>pom.xml</exclude>
                <exclude>.flattened-pom.xml</exclude>
                <exclude>**/target/**/*</exclude>
                <exclude>.git/**</exclude>
                <exclude>setup/**</exclude>
              </excludes>
              <trimTrailingWhitespace/>
              <endWithNewline/>
              <indent>
                <spaces>true</spaces>
                <spacesPerTab>4</spacesPerTab>
              </indent>
            </format>
          </formats>
          <pom>
            <includes>
              <include>pom.xml</include>
            </includes>
            <sortPom>
              <encoding>UTF-8</encoding>
              <lineSeparator>${line.separator}</lineSeparator>
              <expandEmptyElements>false</expandEmptyElements>
              <spaceBeforeCloseEmptyElement>false</spaceBeforeCloseEmptyElement>
              <keepBlankLines>true</keepBlankLines>
              <nrOfIndentSpace>2</nrOfIndentSpace>
              <indentBlankLines>false</indentBlankLines>
              <indentSchemaLocation>false</indentSchemaLocation>
              <predefinedSortOrder>recommended_2008_06</predefinedSortOrder>
              <sortDependencies>groupId,artifactId</sortDependencies>
              <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
              <sortPlugins>groupId,artifactId</sortPlugins>
              <sortProperties>true</sortProperties>
              <sortModules>true</sortModules>
              <sortExecutions>true</sortExecutions>
            </sortPom>
          </pom>
          <java>
            <includes>
              <include>src/main/java/**/*.java</include>
              <include>src/test/java/**/*.java</include>
            </includes>
            <googleJavaFormat>
              <version>1.27.0</version>
              <style>AOSP</style>
              <reflowLongStrings>true</reflowLongStrings>
            </googleJavaFormat>
            <importOrder>
              <wildcardsLast>true</wildcardsLast>
              <order>java|javax,org,com,,fr.softsf,\#,\#fr.softsf</order>
            </importOrder>
            <removeUnusedImports/>
            <formatAnnotations/>
            <licenseHeader>
              <content><![CDATA[
/*
 * NativeVault - Copyright © 2026-present SOFT64.FR Lob2018
 * Licensed under the GNU General Public License v3.0 (GPL-3.0).
 * See the full license at: https://github.com/Lob2018/native-vault/blob/main/LICENSE
 */
]]></content>
            </licenseHeader>
          </java>
        </configuration>
        <executions>
          <execution>
            <id>spotless-apply</id>
            <goals>
              <goal>apply</goal>
            </goals>
            <phase>validate</phase>
          </execution>
          <execution>
            <id>spotless-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>validate</phase>
          </execution>
        </executions>
      </plugin>
      <!-- SpotBugs plugin -->
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.10.3.0</version>
        <configuration>
          <effort>Max</effort>
          <threshold>Low</threshold>
          <xmlOutput>true</xmlOutput>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs</artifactId>
            <version>4.10.3</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
      <!-- Java compiler plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>25</release>
        </configuration>
      </plugin>
      <!-- Surefire plugin for running tests -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.2</version>
        <configuration>
          <argLine>@{jacoco.argLine}
                        --enable-native-access=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <!-- JaCoCo plugin for code coverage -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.15</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <configuration>
              <propertyName>jacoco.argLine</propertyName>
            </configuration>
          </execution>
          <execution>
            <id>report</id>
            <goals>
              <goal>report</goal>
            </goals>
            <phase>test</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
